--- a/数据结构/链表.md
+++ b/数据结构/链表.md
@@ -108,6 +108,139 @@ export default class LinkedList {
         }
         return false
     }
+    indexOf(element) {
+        let current = this.head
+        for (let i = 0; i < this.count && current != null; i++) {
+            if (this.equalsFn(element, current.element)) {
+                return i
+            }
+            current = current.next
+        }
+        return -1
+    }
+    remove(element) {
+        const index = this.indexOf(element)
+        return this.removeAt(index)
+    }
+    size() {
+        return this.count
+    }
+    isEmpty() {
+        return this.size() === 0
+    }
+    getHead() {
+        return this.head
+    }
+    toString() {
+        if (this.head == null) return ''
+        let objString = `${this.head.element}`
+        let current = this.head.next
+        for (let i = 1; i < this.size() && current != null; i++) {
+            objString = `${objString}, ${current.element}`
+            current = current.next
+        }
+        return objString
+    }
 }
 ```
+
+## 双向链表
+
+链表有多种不同的类型。双向链表和普通链表的区别在于：在链表中，一个节点只有链向下一个节点的链接；而在双向链表中，链接是双向的：一个链向下一个元素，另一个链向前一个元素
+
+在单向链表中，如果迭代时错过了要找的元素，就需要回到起点，重新开始迭代。这是双向链表的一个优势
+
+```javascript
+// https://github.com/loiane/javascript-datastructures-algorithms/blob/main/src/js/data-structures/doubly-linked-list.js
+
+class DoublyNode extends Node {
+    constructor(element, next, prev) {
+        super(element, next)
+        this.prev = prev
+    }
+}
+class DoublyLinkedList extends LinkedList {
+    constructor(equalsFn = defaultEquals) {
+        super(equalsFn)
+        this.tail = undefined
+    }
+    
+    insert(element, index) {
+        if (index >= 0 && index <= this.count) {
+            const node = new DoublyNode(element)
+            let current = this.head
+            if (index === 0) {
+                if (this.head == null) {
+                    this.head = node
+                    this.tail = node
+                } else {
+                    node.next = this.head
+                    current.prev = node
+                    this.head = node
+                }
+            } else if (index === this.count) {
+                current = this.tail
+                current.next = node
+                node.prev = current
+                this.tail = node
+            } else {
+                const previous = this.getElementAt(index - 1)
+                current = previous.next
+                node.next = current
+                previous.next = node
+                current.prev = node
+                node.prev = previous
+            }
+            this.count++
+            return true
+        }
+        return false
+    }
+    removeAt(index) {
+        if (index >= 0 && index < this.count) {
+            let current = this.head
+            if (index === 0) {
+                this.head = current.next
+                if (this.count === 1) {
+                    this.tail = undefined
+                } else {
+                    this.head.prev = undefined
+                }
+            } else if (index === this.count - 1) {
+                current = this.tail
+                this.tail = current.prev
+                this.tail.next = undefined
+            } else {
+                current = this.getElementAt(index)
+                const previous = current.prev
+                previous.next = current.next
+                current.next.prev = previous
+            }
+            this.count--
+            return current.element
+        }
+        return undefined
+    }
+}
+```
+
+
+
+## 循环链表
+
+循环链表可以像链表一样只有单向引用，也可以像双向链表一样有双向引用。循环链表和链表之间唯一的区别在于，最后一个元素指向下一个元素的指针不是引用undefined，而是指向第一个元素（head）
+
+```javascript
+class CircularLinkedList extends LinkedList {
+    constructor(equalsFn = defaultEquals) {
+        super(equalsFn)
+    }
+}
+```
+
+
+
+
+
+
 
